<resources>
    <string name="app_name">Тeхнологічні карти</string>
    <string name="sing_in">Увійти</string>
    <string name="login_email">Логін або email</string>
    <string name="email">Email</string>
    <string name="password">Пароль</string>
    <string name="register">Регістрація</string>
    <string name="recovery">Відновити</string>
    <string name="recovery_name">Відновлення</string>
    <string name="register_name">Регістрація</string>
    <string name="text_recovery">Введіть email адрусу вказану під час регістрації, на неї буде відправлено ваш логін і пароль.</string>
    <string name="send">Відправити</string>
    <string name="not_email">Це не email!</string>
    <string name="not_string">Ви нічого не ввели!</string>
    <string name="send_email">Очікуйте, ваш логін і пароль відправлено на ваш email, можливі затримки на сервері.</string>
    <string name="send_email_error">Сервер не знайшов вашого вказаного email, можливо ви не правильно ввели.</string>
    <string name="sing_in_error_login">Невірний логін!</string>
    <string name="sing_in_error_password">Невірний пароль!</string>
    <string name="sing_in_not">Введіть логін і пароль!</string>
    <string name="sing_in_not_login">Введіть логін!</string>
    <string name="sing_in_not_password">Введіть пароль!</string>
    <string name="not_network">Немає доступу до інтернет мережі!</string>
    <string name="exit">Вихід</string>
    <string name="settings">Налаштування</string>
    <string name="profile_name">Профіль</string>
    <string name="menu_go">Далі</string>
    <string name="surname">Прізвище</string>
    <string name="name">Ім\'я</string>
    <string name="surname_father">По батькові</string>
    <string name="manager">Менеджер</string>
    <string name="performer">Виконавець</string>
    <string name="type_account">Тип акаунта:</string>
    <string name="type_title">Тип акаунта:</string>
    <string name="conditions">Регіструючись, Ви погоджуєтесь на обробку ваших персональних даних.</string>
    <string name="login">Логін</string>
    <string name="registration">Зареєструватись</string>
    <string name="send_code">Відправити код</string>
    <string name="code">Код підтвердження</string>
    <string name="fill_fields">Заповніть всі поля.</string>
    <string name="email_code">Введіть Email.</string>
    <string name="sended_code">Очікуйте код відправлено вам на email, можливі затримки на сервері.</string>
    <string name="not_code">Для продовження отримайте код підтвердження.</string>
    <string name="error_code">Невірний код.</string>
    <string name="login_email_too">Користувач з таким логіном і email вже зареєстрований.</string>
    <string name="email_too">Користувач з таким email вже зареєстрований.</string>
    <string name="login_too">Користувач з таким логіном вже зареєстрований.</string>
    <string name="registered">Регістрація виконана.</string>
    <string name="sing">Вхід</string>
    <string name="save_account">Запам\'ятати</string>
    <string name="processing">Обробка</string>
    <string name="view_navigation_open">Відкрити</string>
    <string name="view_navigation_close">Зактити</string>
    <string name="download_gallery">Завантажити з галереї</string>
    <string name="delete">Видалити</string>
    <string name="profile_text">Закінчивши редагування, щоб зміни вступили в дію, натисність кнопку \"Зберегти\".</string>
    <string name="update_save">Зберегти</string>
    <string name="password_old">Старий пароль</string>
    <string name="password_new">Новий пароль</string>
    <string name="change_type_account">Змінюючи тип акаунта будуть видалені всі дані що привязані до цього акаунта.</string>
    <string name="password_error">Не вірний пароль.</string>
    <string name="password_old_not">Введіть старий пароль.</string>
    <string name="save">Збереження</string>
    <string name="saved">Збережено</string>
    <string name="upload">Завантаження зоображення</string>
    <string name="uploadind">Завантаження</string>
    <string name="comleted">Зоображення завантажено</string>
    <string name="error">Збій завантаження</string>
    <string name="deleted_account">Акаунт видалено</string>
    <string name="deleted_image">Зоображення видалено</string>
    <string name="cancel">Відмінити</string>
    <string name="delete_account">Видаливши акаунт ви втратите всі дані, без можливості відновлення! Щоб продовжити, отримайте код підтвердження.</string>
    <string name="code_not">Введіть код підтвердження</string>
    <string name="linking_name">Прив\'язка</string>
    <string name="search_hint">Пошук</string>
    <string name="search">Пошук</string>
    <string name="linking_text">Пошуку здійснюється по прізвищу та імені (менеджеру доступні тільки виконавці, а виконавцю - менеджери)</string>
    <string name="linking_request">Запитів на прив\'язку не має</string>
    <string name="search_error">Нічого не знайшли.</string>
    <string name="more_performer">Прив\'язатись</string>
    <string name="more_manager">Прив\'язати</string>
    <string name="not_enterprise">Підприємство не створено</string>
    <string name="text_position">Cпеціальності:</string>
    <string name="not_position">Нічого не обрано</string>
    <string name="not_position_error">Спеціальності не створено</string>
    <string name="linking_error">Оберіть спеціальність</string>
    <string name="not_linking">Цей користувач вже відправляв вам заявку прийміть її.</string>
    <string name="linked">Заявка на привязку відправлена.</string>
    <string name="links">Заявки</string>
    <string name="not_linked">Прив\'язка не виконана</string>
    <string name="refresh">Оновити</string>
    <string name="position_error">Неможливо, спеціальності не створено</string>
    <string name="linked_hint">Заявок на прив\'язку не надходило, щоб відправити заявку скористайтесь пошуком.</string>
    <string name="position">Спеціальність:</string>
    <string name="not_link">(не підтверджено)</string>
    <string name="link">(прив\'язано)</string>
    <string name="link_hint">Прив\`язано</string>
    <string name="link_one">Прив\'язати</string>
    <string name="link_two">Відв\'язати</string>
    <string name="link_three">Відмовити</string>
    <string name="link_four">Видалити</string>
    <string name="link_five">Відв\'язатись</string>
    <string name="link_error">(відмовлено)</string>
    <string name="not_linked_manager">Створіть підприємство або групу пріцівників а також технологічні карти для необхідних спеціальностей.</string>
    <string name="not_linked_performer">Виконайте прив\'язку до менеджера, скориставшись пошуком.</string>
    <string name="not_linked_confirm">Очікуйте підтвердження менеджером.</string>
    <string name="normal">Нормальний режим</string>
    <string name="lightweight">Полегшений режим</string>
    <string name="light">Легкий режим</string>
    <string name="menu_enterprise">Підриємство</string>
    <string name="settings_enterprise">Налаштування</string>
    <string name="report_enterprise">Звіт</string>
    <string name="hint_enterprise">Назва підприємства</string>
    <string name="text_position_hint">Спеціальності та технологічні карти</string>
    <string name="add">Додати</string>
    <string name="add_position_hint">Назва спеціальності</string>
    <string name="upload_map">Завантажити</string>
    <string name="delete_map">Видалити</string>
    <string name="hint_enterprise_text">Створивши підприємство і спеціальності, натисніть кнопку \"Зберегти\". Технологіча карта створюється за допомогою Microsoft Excel і збірігається в розшитенні \"csv\" - роздільник коми. Прикріпивши нову технологічну карту до спеціальності, стара видаляється автоматично, без можливості відновлення. Тому, якщо ви хочете відредагувати технологічну карту, завантажуєте її і редугуєте в Microsoft Excel.</string>
    <string name="load_sample_map">Зразок</string>
    <string name="load_template_map">Шаблон</string>
    <string name="hint_add">Введіть назву спеціальності і прикріпіть технологічну карту.</string>
    <string name="upload_scv">Завантаження технологічної карти</string>
    <string name="comleted_scv">Технологічну карту завантажено</string>
    <string name="not_position_enterprise">Не створено</string>
    <string name="not_save">Збережіть зміни</string>
    <string name="delete_position">Видаливши спеціальність, ви втратите всі дані прив\'язані до неї, рекомендуємо завантажити копію.</string>
    <string name="error_save">Сталась помилка, перевірте наявність інтернет з\'єднання</string>
    <string name="download">Завантаження файлу</string>
    <string name="downloaded">Завантажено</string>
    <string name="downloaded_error">Сталася помилка!</string>
    <string name="not_file_csv">Файл повинен бути в форматі csv</string>
    <string name="not_created_csv">Для ціеї спеціальності технологічну карту ще не створено</string>
    <string name="not_enterprise_created">Введіть назву підприємства</string>
    <string name="ok">Ок</string>
    <string name="width_comment">З коментарами</string>
    <string name="without_comment">Без коментарів</string>
    <string name="table_null">Список пустий</string>
    <string name="mark_as_completed">Відмітити як виконано</string>
    <string name="not_performance">не виконано</string>
    <string name="today">сьогодні</string>
    <string name="date_of_last">Дата останнього виконання:</string>
    <string name="date_of_future">Дата наступного виконання:</string>
    <string name="not_known">не відомо</string>
    <string name="stitched">прострочено</string>
    <string name="days">дня(-ень)</string>
    <string name="on_today">На сьогодні</string>
    <string name="on_three_days">На 3 дня вперед</string>
    <string name="on_seven_days">На 7 днів вперед</string>
    <string name="by_time">По часу</string>
    <string name="by_type">По типу</string>
    <string name="completed">Виконані</string>
    <string name="all">Усі</string>
    <string name="overdue">Прострочені</string>
    <string name="position_menu">По спеціальності</string>
    <string name="save_filter">Зберегти фільтр</string>
    <string name="comment_manager">Коментар менеджера</string>
    <string name="comment_performer">Коментар виконавця</string>
    <string name="save_comment">Зберегти коментар</string>
    <string name="with">З</string>
    <string name="by">по</string>
    <string name="date_error">Вибрана дата, не повинна бути більшою за сьогоднішню</string>
    <string name="period">Період:</string>
    <string name="save_report">Зберегти звіт</string>
    <string name="hint_report">Сформуйте та збережіть звіт</string>
    <string name="comments">Коментар:</string>
    <string name="other">Інше:</string>
    <string name="without">Без</string>
    <string name="managers">Менеджера</string>
    <string name="performers">Виконавця</string>
    <string name="specialty">Спеціальність:</string>
    <string name="who_made">Ким виконано</string>
    <string name="overall">Загальне:</string>
    <string name="head">Керівник</string>
    <string name="name_doc">І\'мя документа</string>
    <string name="my_template">Мій шаблон</string>
    <string name="not_file_docx">Файл повинен бути в форматі docx</string>
    <string name="not_data">Немає даних</string>
    <string name="head_initials_name_document">Введіть ініціали керівника та назву документа</string>
    <string name="head_initials">Введіть ініціали керівника</string>
    <string name="name_document">Введіть назву документа</string>
    <string name="select_file">Вибрати файл</string>
    <string name="upload_template">Завантаження шаблону</string>
    <string name="comleted_template">Шаблон завантажено</string>
    <string name="who_complete">виконав</string>
    <string name="regime">Режим роботи:</string>
    <string name="not_complated">Не виконано:</string>
    <string name="normal_regime">Нормальний</string>
    <string name="lightweight_regime">Полегшений</string>
    <string name="light_regime">Легкий</string>
</resources>