<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="15dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/upload_map"
            android:textSize="8pt"
            android:textColor="@color/Grey"/>

    </LinearLayout>

    <RadioGroup
        android:id="@+id/type_download_scv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center">

        <RadioButton
            android:id="@+id/width"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/width_comment"
            android:textColor="@color/Grey"
            android:theme="@style/RadioButton"
            android:textSize="8pt"
            android:background="@color/transparent"
            android:layout_marginBottom="5dp"
            android:checked="true"/>

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/without_comment"
            android:textColor="@color/Grey"
            android:theme="@style/RadioButton"
            android:textSize="8pt"
            android:background="@color/transparent"/>

    </RadioGroup>

</LinearLayout>